Improved the UI and ensured NMC template
